--- a/react/package.json
+++ b/react/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.10",
     "uuid": "^11.1.0"
   },
