--- a/react/package.json
+++ b/react/package.json
@@ -10,11 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@maptiler/sdk": "^3.4.1",
+    "@mui/material": "^7.1.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.10",
+    "@types/geojson": "^7946.0.16",
+    "@types/leaflet": "^1.9.19",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^4.2.0",
+    "mapbox-gl": "^3.13.0",
     "mermaid": "^11.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
+    "react-map-gl": "^8.0.4",
     "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.10",
@@ -22,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
