--- a/react/package.json
+++ b/react/package.json
@@ -23,13 +23,16 @@
     "leaflet-geosearch": "^4.2.0",
     "mapbox-gl": "^3.13.0",
     "mermaid": "^11.7.0",
+    "pdfjs-dist": "^5.3.93",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.0.4",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.0.1",
     "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.10",
+    "tesseract.js": "^6.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
