--- a/react/package.json
+++ b/react/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@maptiler/sdk": "^3.4.1",
     "@mui/material": "^7.1.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.10",
     "@types/geojson": "^7946.0.16",
@@ -30,6 +31,7 @@
     "react-map-gl": "^8.0.4",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.0.1",
+    "react-redux": "^9.2.0",
     "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.10",
     "tesseract.js": "^6.0.1",
